# Lou32HelpSite

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  OPERATIONS.md  README.md  lou32help.toml
.github/workflows/: ci.yml  pages.yml
crates/lou32help-cli/: Cargo.toml
crates/lou32help-cli/src/: app.rs  browser_bundle.rs  main.rs  serve.rs
crates/lou32help-cli/tests/: cli.rs
crates/lou32help-core/: Cargo.toml
crates/lou32help-core/src/: config.rs  document.rs  lib.rs  library.rs  path_safety.rs  projection.rs  render.rs  search.rs  validation.rs
crates/lou32help-site/: Cargo.toml
crates/lou32help-site/src/: builder.rs  layout.rs  lib.rs  pages.rs
crates/lou32help-site/src/assets/: search.js.tpl  styles.css  theme.js
crates/lou32help-site/src/snapshots/: lou32help_site__tests__document_page_snapshot.snap  lou32help_site__tests__home_page_snapshot.snap
crates/lou32help-web-search/: Cargo.toml
crates/lou32help-web-search/src/: lib.rs
docs/: GOOGLEOPERATORS-EXAMPLES_REF.txt  HELP32_LenovoFlex5_RegEdit_DisableTabletMode.txt  LOU32HELP=WinThumbsPreloader_help.txt  LOU32HELP_7DevToolssecretsthatshouldntbesecrets.txt  LOU32HELP_API_imagebb_API_v1_overview.txt  LOU32HELP_Audio-EQ-Cookbook.txt  LOU32HELP_ConRef_fullsystemshutdownwithcmd.txt  LOU32HELP_DaRTrecoveryimagecreationscript_powershellscriptexample_WIP.txt  LOU32HELP_DisableUACTaskForSpecificApp.txt  LOU32HELP_DisableWin11TabletMode_DisableConvertibilityControl_RegCmd.txt  LOU32HELP_Get-ModuleExamples.txt  LOU32HELP_GoogleSearchOperatorsReference.txt  LOU32HELP_LIST_githubsearchdorks.txt  LOU32HELP_MIDIHELP_generalmidipercussionkeymap_gmchannel10.txt  LOU32HELP_MIDIHELP_gmchannelmap_table.txt  LOU32HELP_MIDIHELP_midibasics_intro.TXT  LOU32HELP_MIDIHELP_midinotenumbersalloctaves.txt  LOU32HELP_MIDIHELP_midivelocitydBdynamicsanddifferencestable.txt  LOU32HELP_MIDIHELP_table1_explanationofmidimessages.txt  LOU32HELP_MIDIHELP_table2_expandedexplanationofmidimessages.txt  LOU32HELP_MIDIHELP_table3explanationofmidicontrollernumbers.txt  LOU32HELP_MIDISPEC_Table_MIDI1.0SpecificationMessageSummary.txt  LOU32HELP_MIDI_GMStandard_GMDrumPatchesTable.txt  LOU32HELP_MIDI_GMStandard_GMPatchesTable.txt  LOU32HELP_MIDI_GMStandard_GMPatchesTable_COMBINED.txt  LOU32HELP_MIDI_MIDINoteNumberToFrequency_ConversionChart.txt  LOU32HELP_MIDI_NoteFrequencyChart.txt  LOU32HELP_MIDI_midistandardstable_GM_GS_XG_tables.txt  LOU32HELP_Microsoft.Winget.Client.txt  LOU32HELP_PANDOC_COMMAND_DOCX_TO_MARKDOWN.txt  LOU32HELP_POWERSHELL_EXAMPLE_SCRIPT_installwingetonwindowssandbox.txt  LOU32HELP_PSProfileCustomizations.txt  LOU32HELP_PS_POWERSHELLSCRIPTWITHFFMPEG_VIDEOFRAMEEXTRACTION.txt  LOU32HELP_PS_howtobreakalineinpowershellwrite-host.txt  LOU32HELP_Powershell_UsefulQueryPatterns.html  LOU32HELP_Powershell_setDNSoverHTTPSviaPowershell.txt  LOU32HELP_REF_8dnsproviderslist.txt  LOU32HELP_REF_PowerShellSyntax_examplequerytogetallobjectswherenamelike_withwildcards_TEMPLATEREF.txt  LOU32HELP_REF_ffmpegtemplates.txt  LOU32HELP_REF_gmmap.txt  (+193 more)
migration/: README.md  legacy-docs-manifest.csv
scripts/: generate-legacy-docs-manifest.ps1  run-audit.ps1
(+60 files in other folders)
