[workspace]
members = [
    "crates/lou32help-core",
    "crates/lou32help-cli",
    "crates/lou32help-site",
    "crates/lou32help-web-search",
    "crates/lou32help-test-fixtures",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Louis"]
rust-version = "1.85"

[workspace.dependencies]
ammonia = "4.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
insta = "1.43"
maud = "0.27"
pulldown-cmark = "0.13"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
tempfile = "3.15"
thiserror = "2.0"
tiny_http = "0.12"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
sha2 = "0.10"
base64 = "0.22"
wasm-bindgen = "0.2"
