[package]
name = "lou32help-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ammonia.workspace = true
anyhow.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
lou32help-test-fixtures = { path = "../lou32help-test-fixtures" }
