[package]
name = "lou32help-web-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
lou32help-core = { path = "../lou32help-core" }
serde_json.workspace = true
wasm-bindgen.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
